# scipy-style-medical-image-filter-cpp

./: CMakeLists.txt  LICENSE  README.md
include/: ImageFilter.h
lib/dcmtk-install/cmake/: DCMTKConfig.cmake  DCMTKTargets-release.cmake  DCMTKTargets.cmake
lib/dcmtk-install/include/dcmtk/config/: osconfig.h
lib/dcmtk-install/lib/pkgconfig/: dcmtk.pc
src/: filterfuns.cpp  main.cpp
